Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-7567] Crash lowering ill-scoped use of variable #50109

Closed
CodaFi opened this issue Apr 29, 2018 · 4 comments
Closed

[SR-7567] Crash lowering ill-scoped use of variable #50109

CodaFi opened this issue Apr 29, 2018 · 4 comments
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software

Comments

@CodaFi
Copy link
Member

CodaFi commented Apr 29, 2018

Previous ID SR-7567
Radar rdar://problem/39868144
Original Reporter @CodaFi
Type Bug
Status Resolved
Resolution Done

Attachment: Download

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, CompilerCrash
Assignee None
Priority Medium

md5: 8852c7d129a3e92941fb022464355ba8

is duplicated by:

  • SR-7591 Compiler segfault 11: Cyclic declaration with a guard statement

relates to:

  • SR-7591 Compiler segfault 11: Cyclic declaration with a guard statement

Issue Description:

This code should diagnose `outer` as being ill-scoped but instead lets it through to SILGen where it blows up

func foo() {
  guard let outer = (5 as? Optional<Int>) else {
    guard true else {
      fatalError("Lowering referencing uncached type? \(outer)")
    }
  }
}
@belkadan
Copy link
Contributor

belkadan commented May 1, 2018

Uh, wow. @DougGregor, do we have one of these already?

@DougGregor
Copy link
Member

@swift-ci create

@DougGregor
Copy link
Member

Wow indeed. I haven't seen this before.

@DougGregor
Copy link
Member

#16388

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the crash Bug: A crash, i.e., an abnormal termination of software label Dec 12, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself crash Bug: A crash, i.e., an abnormal termination of software
Projects
None yet
Development

No branches or pull requests

4 participants